<?xml version="1.0" encoding="utf-8"?>
<resources>

    <!-- App -->
    <string name="app_name">拉勾App</string>
    <string name="action_settings">Settings</string>
    <string name="hello_world">Hello world!</string>
    <string name="login_username_hint">请输入已验证邮箱</string>
    <string name="login_username">请输入邮箱</string>
    <string name="login_username_reg">请输入您的邮箱</string>
    <string name="login_phone_hint">请输入手机号</string>
    <string name="login_password_hint">请输入密码</string>
    <string name="user_email_hint">请输入邮箱,便于找回密码</string>
    <string name="login_email_hint">再次输入密码&#8230;</string>
    <string name="wenxiangtishi_hint">温馨提示：带*为必填项</string>
    <string name="login">登录</string>
    <string name="user_login">用户登陆</string>
    <string name="register">注册</string>
    <string name="forget">忘记密码?</string>
    <string name="visable_pass">显示密码</string>
    <string name="register_txt1">还没有拉勾账号？</string>
    <string name="register_txt7">还没有拉勾企业号？</string>
    <string name="register_txt2">现在注册 </string>
    <string name="register_txt3">企业用户？-></string>
    <string name="register_txt4">企业注册</string>
    <string name="register_txt5">企业登陆</string>
    <string name="qydlrk">企业登陆入口>></string>
    <string name="register_txt6">用户注册</string>
    <string name="login_account">账号* </string>
    <string name="phone_account">手机号 *</string>
    <string name="email_account">邮箱* </string>
    <string name="error_aialog">待完善中...</string>
     <string name="dialog_message_title">提示</string>
    <!--  -->
    <string name="email_user">邮箱* </string>
    <string name="user_phoe">手机号* </string>
    <string name="login_pwd">密码* </string>
    <string name="login_email">确认密码 *</string>
    <string name="message_search_hint">搜索&#8230;</string>
    <string name="main_tab_recent">首页</string>
    <string name="main_tab_news">消息</string>
    <string name="mian_tab_set">设置</string>
    <string name="xlistview_header_hint_normal">下拉刷新</string>
    <string name="xlistview_header_hint_ready">松开刷新数据</string>
    <string name="xlistview_header_hint_loading">正在加载&#8230;</string>
    <string name="xlistview_header_last_time">上次更新时间：</string>
    <string name="xlistview_footer_hint_normal">查看更多</string>
    <string name="xlistview_footer_hint_ready">松开载入更多</string>
    <string name="add_avator">头像</string>
    <string name="add_nick">昵称</string>
    <string name="add_name">账号</string>
    <string name="add_name_hint">请输入昵称&#8230;</string>
    <string name="add_gender">性别</string>
    <string name="set_notify">接收新消息通知</string>
    <string name="set_myinfo">个人资料</string>
    <string name="set_blacklist">黑名单</string>
    <string name="set_voice">声音</string>
    <string name="set_vibrate">震动</string>
    <string name="tips">提示</string>
    <string name="logout">退出登录</string>
    <string name="pop_photo">拍照</string>
    <string name="pop_choose">从手机相册选中</string>
    <string name="network_tips">当前网络不可用,请检查您的网络!</string>
    <string name="network_tip">亲，网络不给力哦，请稍后再试。</string>
    <string name="toast_error_password_null">密码不能为空</string>
    <string name="toast_error_username_null">用户名不能为空</string>
    <string name="toast_error_wjname_null">邮箱不可为空,请在邮箱框中输入邮箱。</string>
    <string name="toast_error_yxcw_null">邮箱输入错误，请在邮箱框中输入正确的邮箱。</string>
    <string name="forget_password_email_error">邮件发送失败，请确认您的邮件地址</string>
    <string name="toast_error_phone_null">用户名不能为空</string>
    <string name="toast_error_comfirm_password">输入的两次密码不一致</string>
    <string name="username">用户名</string>
    <string name="search">搜索</string>

    <string name="tv_job">招聘职位:</string>
    <string name="job">如:Android开发工程师</string>
    <string name="tv_companyname">公司名称:</string>
    <string name="companyname">如:腾讯</string>
    <string name="tv_address">所在地址:</string>
    <string name="address">如:广州-天河</string>
    <string name="tv_worktime">要求经验:</string>
    <string name="worktime">不限/1-3年/3-5年</string>
    <string name="tv_education">要求学历:</string>
    <string name="education">大专以上/本科等</string>
    <string name="tv_finance">发展阶段:</string>
    <string name="finance">A轮/B轮/上市公司</string>
    <string name="tv_people">公司人数:</string>
    <string name="people">1-50人/100-500人/2000人以上</string>
    <string name="tv_industry">产业领域:</string>
    <string name="industry">移动互联网，电子商务，金融</string>
    <string name="tv_salary">薪\t\t\t资:</string>
    <string name="salary">5-6/10-12k</string>
    <string name="content">职位描述</string>
    <string name="release">点击发布</string>
    <string name="title_activity_login">LoginActivity</string>
    <string name="title_activity_welcome">WelcomeActivity</string>
    <string name="title_activity_user_info">UserInfoActivity</string>
    <string name="title_activity_more_settings">MoreSettingsActivity</string>
    <string name="title_activity_resume">ResumeActivity</string>
    <string name="title_activity_release">ReleaseActivity</string>
    <string name="title_activity_success">SuccessActivity</string>
    <string name="title_activity_employment">EmploymentActivity</string>
    <string name="title_activity_my_release">MyReleaseActivity</string>

</resources>