<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/login_bg"
    android:orientation="vertical" >

    <include
        android:id="@+id/headerview"
        layout="@layout/headerview_layout" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="30dp"
        android:orientation="vertical" >

        <!-- 用户手机号 -->

        <LinearLayout
            style="@style/Register_Input"
            android:background="@drawable/button_shape_reg" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/padding_start_end"
                android:paddingStart="@dimen/padding_start_end"
                android:text="@string/phone_account"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_user_phone"
                style="@style/Register_Edit"
                android:hint="@string/login_phone_hint" />
        </LinearLayout>

        <!-- 用户注册邮箱 -->

        <LinearLayout
            style="@style/Register_Input"
            android:background="@drawable/button_shape_reg" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/register_margin"
                android:paddingStart="@dimen/register_margin"
                android:text="@string/email_user"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_user_email"
                style="@style/Register_Edit"
                android:hint="@string/user_email_hint" />
        </LinearLayout>

        <!-- 用户密码 -->

        <LinearLayout
            style="@style/Register_Input"
            android:background="@drawable/button_shape_reg" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/register_margin"
                android:paddingStart="@dimen/register_margin"
                android:text="@string/login_pwd"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_password"
                style="@style/Register_Edit"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword" />
        </LinearLayout>

        <!-- 用户确认密码 -->

        <LinearLayout
            style="@style/Register_Input"
            android:background="@drawable/button_shape_reg" >

            <TextView
                style="@style/Smile.TextView._Black"
                android:layout_width="wrap_content"
                android:layout_height="match_parent"
                android:gravity="center_vertical"
                android:paddingEnd="@dimen/register_margin"
                android:paddingStart="@dimen/register_margin"
                android:text="@string/login_email"
                android:textStyle="bold" />

            <EditText
                android:id="@+id/et_repassword"
                style="@style/Register_Edit"
                android:hint="@string/login_email_hint"
                android:inputType="textPassword" />
        </LinearLayout>
        <!-- 用户注册按钮 -->

        <Button
            android:id="@+id/btn_register"
            android:layout_width="fill_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/button_shape"
            android:text="@string/register"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large" />
    </LinearLayout>

</LinearLayout>