<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res/com.tedu.lagou"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="${relativePackage}.${activityClass}" >

    <include
        android:id="@+id/headerview"
        layout="@layout/headerview_layout" />

    <RelativeLayout
        android:id="@+id/frameLayout1"
        android:layout_width="80dp"
        android:layout_height="80dp"
        android:layout_below="@+id/headerview" >

        <com.tedu.lagou.view.CircleImageView
            android:id="@+id/iv_regist_avatar"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:layout_marginStart="8dp"
            android:padding="3dp"
            android:src="@drawable/ic_launcher"
            app:border_color="#CA938C"
            app:border_width="2dp" />
    </RelativeLayout>

    <LinearLayout
        android:id="@+id/ll_headerview"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignBottom="@+id/frameLayout1"
        android:layout_below="@+id/headerview"
        android:layout_marginLeft="5dp"
        android:layout_marginStart="5dp"
        android:layout_toEndOf="@+id/frameLayout1"
        android:layout_toRightOf="@+id/frameLayout1"
        android:orientation="vertical" >

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:layout_gravity="center|center" >

            <TextView
                android:id="@+id/textView1"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/tv_job" />

            <EditText
                android:id="@+id/et_job"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView1"
                android:layout_toRightOf="@+id/textView1"
                android:ems="15"
                android:hint="@string/job"
                android:singleLine="true"
                android:textSize="16sp" >

                <requestFocus />
            </EditText>
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="40dp" >

            <TextView
                android:id="@+id/textView2"
                android:layout_width="wrap_content"
                android:layout_height="40dp"
                android:gravity="center"
                android:text="@string/tv_companyname" />

            <EditText
                android:id="@+id/et_companyname"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentTop="true"
                android:layout_toEndOf="@+id/textView2"
                android:layout_toRightOf="@+id/textView2"
                android:ems="15"
                android:hint="@string/companyname"
                android:singleLine="true"
                android:textSize="16sp" >

                <requestFocus />
            </EditText>
        </RelativeLayout>
    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_headerview"
        android:orientation="vertical" >

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
             >

            <TextView
                android:id="@+id/textView3"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/tv_address" />

            <EditText
                android:id="@+id/et_address"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/address"
                android:singleLine="true"
                android:textSize="16sp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView4"
                android:layout_width="wrap_content"
                android:layout_height="30dp"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/tv_worktime" />

            <EditText
                android:id="@+id/et_workTime"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:ems="15"
                android:hint="@string/worktime"
                android:singleLine="true"
                android:textSize="16sp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/tv_education" />

            <EditText
                android:id="@+id/et_education"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:ems="15"
                android:hint="@string/education"
                android:singleLine="true"
                android:textSize="16sp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView6"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/tv_finance" />

            <EditText
                android:id="@+id/et_finance"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/finance"
                android:singleLine="true"
                android:textSize="16sp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView7"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/tv_people" />

            <EditText
                android:id="@+id/et_people"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/people"
                android:singleLine="true"
                android:textSize="16sp" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView8"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/tv_industry" />

            <EditText
                android:id="@+id/et_industry"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:hint="@string/industry"
                android:singleLine="true"
                android:textSize="16sp"
                android:windowSoftInputMode="adjustResize" >

                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_marginTop="5dp" >

            <TextView
                android:id="@+id/textView9"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginStart="10dp"
                android:gravity="center"
                android:text="@string/tv_salary"
                android:windowSoftInputMode="adjustResize" />

            <EditText
                android:id="@+id/et_salary"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:ems="15"
                android:singleLine="true"
                android:hint="@string/salary" >
                <requestFocus />
            </EditText>
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="8dp"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/add_content"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="10dp"
                android:layout_marginRight="10dp"
                android:background="@android:drawable/edit_text"
                android:enabled="true"
                android:gravity="top"
                android:hint="@string/content"
                android:inputType="textMultiLine"
                android:maxLines="8"
                android:minLines="5"
                android:scrollbars="vertical"
                android:textSize="16sp"
                android:windowSoftInputMode="adjustResize" >
            </EditText>

            <Button
                android:id="@+id/btn_submit"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/release" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>