<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/four_screen_bg" >

   <!--  <include
        android:id="@+id/headerview"
        layout="@layout/headerview_layout" />
 -->
    <LinearLayout
        android:id="@+id/bg_img_login"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:gravity="center"
        android:orientation="vertical" >

        <ImageView
            android:id="@+id/iv_icon"
            android:layout_width="100dp"
            android:layout_height="130dp"
            android:layout_gravity="center_horizontal"
            android:layout_marginTop="20dp"
            android:src="@drawable/logo_new" />

        <LinearLayout
            android:id="@+id/et_inputt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_margin="@dimen/register_margin"
            android:orientation="vertical" >

            <EditText
                android:id="@+id/et_hr_email"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@color/touming_bg"
                android:drawableLeft="@drawable/login_icon_account"
                android:drawablePadding="@dimen/drawablePadding_top_bottom"
                android:hint="@string/login_username"
                android:inputType="textEmailAddress"
                android:paddingLeft="@dimen/tab_padding_top_bottom"
                android:shadowDx="0.0"
                android:shadowDy="1.0"
                android:shadowRadius="1.0"
                android:textColorHint="#686867" />

            <View
                android:layout_width="match_parent"
                android:layout_height="@dimen/base_line_width"
                android:background="@drawable/base_horization_line" />

            <EditText
                android:id="@+id/et_hr_password"
                android:layout_width="fill_parent"
                android:layout_height="@dimen/base_action_bar_height"
                android:background="@color/transparent"
                android:drawableLeft="@drawable/login_icon_password"
                android:drawablePadding="@dimen/drawablePadding_top_bottom"
                android:hint="@string/login_password_hint"
                android:inputType="textPassword"
                android:paddingEnd="@dimen/tab_padding_top_bottom"
                android:paddingStart="@dimen/tab_padding_top_bottom"
                android:textColorHint="#686867" />
        </LinearLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content" >

            <CheckBox
                android:id="@+id/cb_hr_pass"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_marginEnd="@dimen/register_margin"
                android:layout_marginStart="@dimen/register_margin"
                android:text="@string/visable_pass"
                style="@style/MyCheckBox"
                android:textColor="#F0F0F0" />

            <CheckBox
                android:id="@+id/cb_hr_remenber"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_marginLeft="20dp"
                style="@style/MyCheckBox"
                android:layout_alignParentTop="true"
                android:text="记住密码"
                android:textColor="#F0F0F0"
                 />

        </RelativeLayout>

        <Button
            android:id="@+id/btn_hr_login"
            android:layout_width="match_parent"
            android:layout_height="@dimen/base_action_bar_height"
            android:layout_margin="@dimen/activity_vertical_margin"
            android:background="@drawable/button_shape"
            android:gravity="center"
            android:text="@string/login"
            android:textColor="@color/base_color_text_white"
            android:textSize="@dimen/text_size_large" />

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="@dimen/tab_height"
            android:layout_marginBottom="@dimen/margin_size"
            android:gravity="center"
            android:orientation="horizontal" >

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register_txt7"
                android:textColor="@color/base_color_text_gray"
                android:textSize="@dimen/tab_text_size" />

            <TextView
                android:id="@+id/tv_hr_register"
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:layout_marginEnd="@dimen/margin_chat_top"
                android:layout_marginStart="@dimen/margin_chat_top"
                android:gravity="center_vertical"
                android:text="@string/register_txt2"
                android:textColor="@color/color_theme"
                android:textSize="@dimen/tab_text_size" />
        </LinearLayout>
    </LinearLayout>

</RelativeLayout>